kubernetes/test-env/deployment-redis.yaml
# TODO
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-deployment-redis
  name: test-deployment-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deployment-redis
  template:
    metadata:
      labels:
        app: test-deployment-redis
    spec:
      volumes:
      - name: test-redis-volume
        persistentVolumeClaim:
          claimName: test-pvc-redis
      containers:
      - image: redis:alpine
        name: test-redis
        volumeMounts:
        - mountPath: "/data"
          name: test-redis-volume
