kubernetes/test-env/service-backend.yaml
# TODO
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-deployment-backend
  name: test-service-backend
spec:
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9000
  selector:
    app: test-deployment-backend
  type: ClusterIP
