kubernetes/test-env/service-frontend.yaml
# TODO
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-deployment-frontend
  name: test-service-frontend
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-deployment-frontend
  type: NodePort
